--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@
   }
   
   .fh5co-cover .desc {
-    top: 50%;
+    top: 45vh;
     position: absolute;
     width: 100%;
     margin-top: -140px;
@@ -240,20 +240,7 @@
     border-bottom: none !important;
     transition: all 0.2s ease-in-out;
   }
-  
-  .sf-menu2 a {
-    color: #fff;
-    padding: 1em 1em !important;
-    font-weight: normal;
-    border-left: none;
-    border-top: none;
-    border-top: none;
-    text-decoration: none;
-    zoom: 1;
-    font-size: 0.8em;
-    border-bottom: none !important;
-    transition: all 0.2s ease-in-out;
-  }
+
   
   .sf-menu a.headershadow {
     font-size: 13px;
@@ -288,39 +275,7 @@
   .sf-menu ul li {
     background: transparent;
   }
-  
-  .sf-arrows .sf-with-ul {
-    padding-right: 2.5em;
-    *padding-right: 1em;
-  }
-  
-  .sf-arrows .sf-with-ul:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    right: 1em;
-    margin-top: -3px;
-    height: 0;
-    width: 0;
-    border: 5px solid transparent;
-    border-top-color: #ccc;
-  }
-  
-  .sf-arrows > li > .sf-with-ul:focus:after, .sf-arrows > li:hover > .sf-with-ul:after, .sf-arrows > .sfHover > .sf-with-ul:after {
-    border-top-color: #ccc;
-  }
-  
-  .sf-arrows ul .sf-with-ul:after {
-    margin-top: -5px;
-    margin-right: -3px;
-    border-color: transparent;
-    border-left-color: #ccc;
-  }
-  
-  .sf-arrows ul li > .sf-with-ul:focus:after, .sf-arrows ul li:hover > .sf-with-ul:after, .sf-arrows ul .sfHover > .sf-with-ul:after {
-    border-left-color: #ccc;
-  }
-  
+
   #fh5co-header-section {
     padding: 0;
     position: absolute;
@@ -579,67 +534,6 @@
     position: relative;
   }
   
-  .fh5co-grid {
-    height: 302px;
-    background-size: cover;
-    background-position: center center;
-    margin-bottom: 30px;
-    position: relative;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    border-radius: 7px;
-  }
-  
-  @media screen and (max-width: 480px) {
-    .fh5co-grid {
-      height: 400px;
-    }
-  }
-  
-  .fh5co-grid .image-popup {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(0, 0, 0, 0.5);
-    opacity: 0;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    border-radius: 7px;
-  }
-  
-  .fh5co-grid .image-popup .prod-title {
-    position: absolute;
-    top: 50%;
-    bottom: 20px;
-    left: 20px;
-    right: 20px;
-    margin-top: -25px;
-  }
-  
-  .fh5co-grid .image-popup .prod-title h3 {
-    margin-bottom: 10px;
-    color: #fff;
-    font-size: 20px;
-  }
-  
-  .fh5co-grid .image-popup .prod-title span {
-    color: #fff;
-  }
-  
-  .fh5co-grid:hover {
-    -webkit-transform: scale(1.05);
-    -moz-transform: scale(1.05);
-    -o-transform: scale(1.05);
-    transform: scale(1.05);
-  }
-  
-  .fh5co-grid:hover .image-popup {
-    opacity: 1;
-  }
   
   .services {
     margin-bottom: 5em;
@@ -660,271 +554,7 @@
     font-size: 20px;
     font-weight: 400;
   }
-  
-  #fh5co-services, #fh5co-about, #fh5co-contact {
-    padding: 7em 0;
-  }
-  
-  @media screen and (max-width: 768px) {
-    #fh5co-services, #fh5co-about, #fh5co-contact {
-      padding: 4em 0;
-    }
-  }
-  
-  #fh5co-services .fh5co-number {
-    font-size: 30px;
-    color: #1fb5f6;
-    position: relative;
-    padding-top: 10px;
-    font-style: italic;
-    display: -moz-inline-stack;
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-  }
-  
-  #fh5co-services .fh5co-number:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 3px;
-    top: 0;
-    left: 0;
-    background: #1fb5f6;
-  }
-  
-  #fh5co-services .fh5co-icon {
-    margin-bottom: 30px;
-    margin-top: 50px;
-    position: relative;
-    display: -moz-inline-stack;
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-  }
-  
-  @media screen and (max-width: 768px) {
-    #fh5co-services .fh5co-icon {
-      margin-top: 0px;
-      float: none;
-    }
-  }
-  
-  #fh5co-services .fh5co-icon i {
-    font-size: 200px;
-    color: #3FC1C9;
-  }
-  
-  @media screen and (max-width: 768px) {
-    #fh5co-services .fh5co-icon i {
-      font-size: 100px;
-    }
-  }
-  
-  #fh5co-contact .contact-info {
-    margin: 0;
-    padding: 0;
-  }
-  
-  #fh5co-contact .contact-info li {
-    list-style: none;
-    margin: 0 0 20px 0;
-    position: relative;
-    padding-left: 40px;
-  }
-  
-  #fh5co-contact .contact-info li i {
-    position: absolute;
-    top: .3em;
-    left: 0;
-    font-size: 22px;
-    color: rgba(0, 0, 0, 0.3);
-  }
-  
-  #fh5co-contact .contact-info li a {
-    font-weight: 400 !important;
-    color: rgba(0, 0, 0, 0.3);
-  }
-  
-  #fh5co-contact .form-control {
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    -ms-box-shadow: none;
-    -o-box-shadow: none;
-    box-shadow: none;
-    border: none;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    font-size: 18px;
-    font-weight: 400;
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
-    -ms-border-radius: 0px;
-    border-radius: 3px;
-  }
-  
-  #fh5co-contact .form-control:focus, #fh5co-contact .form-control:active {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
-  }
-  
-  #fh5co-contact input[type="text"] {
-    height: 50px;
-  }
-  
-  #fh5co-contact .form-group {
-    margin-bottom: 30px;
-  }
-  
-  .fh5co-testimonial {
-    position: relative;
-    background: #fff;
-    padding: 4em 0;
-    border-radius: 5px;
-    -webkit-box-shadow: 0px 18px 88px -22px rgba(0, 0, 0, 0.58);
-    -moz-box-shadow: 0px 18px 88px -22px rgba(0, 0, 0, 0.58);
-    box-shadow: 0px 18px 88px -22px rgba(0, 0, 0, 0.58);
-  }
-  
-  @media screen and (max-width: 768px) {
-    .fh5co-testimonial {
-      border-right: 0;
-      margin-bottom: 80px;
-    }
-  }
-  
-  .fh5co-testimonial h2 {
-    font-size: 16px;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-weight: bold;
-    margin-bottom: 50px;
-  }
-  
-  .fh5co-testimonial figure {
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    margin-left: -44px;
-    margin-bottom: 20px;
-    background-size: cover;
-  }
-  
-  .fh5co-testimonial figure img {
-    width: 88px;
-    height: 88px;
-    border: 10px solid #fff;
-    background-size: cover;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    border-radius: 50%;
-  }
-  
-  .fh5co-testimonial blockquote {
-    border: none;
-    margin-bottom: 20px;
-  }
-  
-  .fh5co-testimonial blockquote p {
-    font-style: italic;
-    font-size: 26px;
-    line-height: 1.6em;
-    color: #555555;
-  }
-  
-  .fh5co-testimonial span {
-    font-style: italic;
-  }
-  
-  .fh5co-blog {
-    margin-bottom: 60px;
-  }
-  
-  .fh5co-blog a img {
-    margin-bottom: 30px;
-    width: 100%;
-    height: 300px;
-    -webkit-border-radius: 7px;
-    -moz-border-radius: 7px;
-    -ms-border-radius: 7px;
-    border-radius: 7px;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .fh5co-blog {
-      width: 100%;
-    }
-  }
-  
-  .fh5co-blog .image-popup {
-    opacity: 1;
-  }
-  
-  .fh5co-blog .image-popup span {
-    display: inline-block;
-    margin-bottom: 20px;
-  }
-  
-  .fh5co-blog .image-popup span.posted_by {
-    font-style: italic;
-    color: rgba(0, 0, 0, 0.3);
-    font-size: 18px;
-  }
-  
-  .fh5co-blog .image-popup span.comment {
-    float: right;
-  }
-  
-  .fh5co-blog .image-popup span.comment a {
-    color: rgba(0, 0, 0, 0.3);
-  }
-  
-  .fh5co-blog .image-popup span.comment a i {
-    color: #3FC1C9;
-    padding-left: 7px;
-  }
-  
-  .fh5co-blog .image-popup h3 {
-    font-size: 26px;
-    margin-bottom: 20px;
-  }
-  
-  .fh5co-blog .image-popup h3 a {
-    color: rgba(0, 0, 0, 0.6);
-  }
-  
-  #fh5co-start-project-section {
-    padding: 7em 0;
-    background: #F64E8B;
-  }
-  
-  #fh5co-start-project-section h2 {
-    color: white;
-    font-size: 60px;
-    text-transform: uppercase;
-    font-weight: 300;
-  }
-  
-  @media screen and (max-width: 768px) {
-    #fh5co-start-project-section h2 {
-      font-size: 30px;
-    }
-  }
-  
-  #fh5co-start-project-section a:hover, #fh5co-start-project-section a:focus, #fh5co-start-project-section a:active {
-    color: white !important;
-  }
-  
-  #map {
-    width: 100%;
-    height: 500px;
-    position: relative;
-  }
-  
-  @media screen and (max-width: 768px) {
-    #map {
-      height: 200px;
-    }
-  }
+
   
   .fh5co-social-icons > a {
     padding: 4px 10px;
@@ -1008,265 +638,7 @@
     overflow-x: hidden;
     position: relative;
   }
-  
-  .fh5co-offcanvas {
-    overflow: hidden;
-  }
-  
-  .fh5co-offcanvas #fh5co-wrapper {
-    overflow: hidden !important;
-  }
-  
-  #fh5co-page {
-    position: relative;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
-  }
-  
-  .fh5co-offcanvas #fh5co-page {
-    -moz-transform: translateX(-240px);
-    -webkit-transform: translateX(-240px);
-    -ms-transform: translateX(-240px);
-    -o-transform: translateX(-240px);
-    transform: translateX(-240px);
-  }
-  
-  @media screen and (max-width: 768px) {
-    #fh5co-menu-wrap {
-      display: none;
-    }
-  }
-  
-  #offcanvas-menu {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    z-index: 99;
-    background: #222;
-    right: -240px;
-    width: 240px;
-    padding: 20px;
-    overflow-y: scroll !important;
-  }
-  
-  #offcanvas-menu ul {
-    padding: 0;
-    margin: 0;
-  }
-  
-  #offcanvas-menu ul li {
-    padding: 0;
-    margin: 0 0 10px 0;
-    list-style: none;
-  }
-  
-  #offcanvas-menu ul li a {
-    font-size: 18px;
-    color: rgba(255, 255, 255, 0.4);
-  }
-  
-  #offcanvas-menu ul li a:hover {
-    color: #3FC1C9;
-  }
-  
-  #offcanvas-menu ul li > .fh5co-sub-menu {
-    margin-top: 9px;
-    padding-left: 20px;
-  }
-  
-  #offcanvas-menu ul li.active > a {
-    color: #3FC1C9;
-  }
-  
-  #offcanvas-menu ul .fh5co-sub-menu {
-    display: block !important;
-  }
-  
-  .fh5co-nav-toggle {
-    cursor: pointer;
-    text-decoration: none;
-  }
-  
-  .fh5co-nav-toggle.active i::before, .fh5co-nav-toggle.active i::after {
-    background: #fff;
-  }
-  
-  .fh5co-nav-toggle.dark.active i::before, .fh5co-nav-toggle.dark.active i::after {
-    background: #fff;
-  }
-  
-  .fh5co-nav-toggle:hover, .fh5co-nav-toggle:focus, .fh5co-nav-toggle:active {
-    outline: none;
-    border-bottom: none !important;
-  }
-  
-  .fh5co-nav-toggle i {
-    position: relative;
-    display: -moz-inline-stack;
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    width: 30px;
-    height: 2px;
-    color: #fff;
-    font: bold 14px/.4 Helvetica;
-    text-transform: uppercase;
-    text-indent: -55px;
-    background: #fff;
-    transition: all .2s ease-out;
-  }
-  
-  .fh5co-nav-toggle i::before, .fh5co-nav-toggle i::after {
-    content: '';
-    width: 30px;
-    height: 2px;
-    background: #fff;
-    position: absolute;
-    left: 0;
-    -webkit-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-  }
-  
-  .fh5co-nav-toggle.dark i {
-    position: relative;
-    color: #000;
-    background: #000;
-    transition: all .2s ease-out;
-  }
-  
-  .fh5co-nav-toggle.dark i::before, .fh5co-nav-toggle.dark i::after {
-    background: #000;
-    -webkit-transition: 0.2s;
-    -o-transition: 0.2s;
-    transition: 0.2s;
-  }
-  
-  .fh5co-nav-toggle i::before {
-    top: -7px;
-  }
-  
-  .fh5co-nav-toggle i::after {
-    bottom: -7px;
-  }
-  
-  .fh5co-nav-toggle:hover i::before {
-    top: -10px;
-  }
-  
-  .fh5co-nav-toggle:hover i::after {
-    bottom: -10px;
-  }
-  
-  .fh5co-nav-toggle.active i {
-    background: transparent;
-  }
-  
-  .fh5co-nav-toggle.active i::before {
-    top: 0;
-    -webkit-transform: rotateZ(45deg);
-    -moz-transform: rotateZ(45deg);
-    -ms-transform: rotateZ(45deg);
-    -o-transform: rotateZ(45deg);
-    transform: rotateZ(45deg);
-  }
-  
-  .fh5co-nav-toggle.active i::after {
-    bottom: 0;
-    -webkit-transform: rotateZ(-45deg);
-    -moz-transform: rotateZ(-45deg);
-    -ms-transform: rotateZ(-45deg);
-    -o-transform: rotateZ(-45deg);
-    transform: rotateZ(-45deg);
-  }
-  
-  .fh5co-nav-toggle {
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    z-index: 9999;
-    display: block;
-    margin: 0 auto;
-    display: none;
-    cursor: pointer;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .fh5co-nav-toggle {
-      display: block;
-      top: 0px;
-      margin-top: 2em;
-    }
-  }
-  
-  @media screen and (max-width: 480px) {
-    .col-xxs-12 {
-      float: none;
-      width: 100%;
-    }
-  }
-  
-  .row-bottom-padded-lg {
-    padding-bottom: 7em;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .row-bottom-padded-lg {
-      padding-bottom: 2em;
-    }
-  }
-  
-  .row-top-padded-lg {
-    padding-top: 7em;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .row-top-padded-lg {
-      padding-top: 2em;
-    }
-  }
-  
-  .row-bottom-padded-md {
-    padding-bottom: 4em;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .row-bottom-padded-md {
-      padding-bottom: 2em;
-    }
-  }
-  
-  .row-top-padded-md {
-    padding-top: 4em;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .row-top-padded-md {
-      padding-top: 2em;
-    }
-  }
-  
-  .row-bottom-padded-sm {
-    padding-bottom: 2em;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .row-bottom-padded-sm {
-      padding-bottom: 2em;
-    }
-  }
-  
-  .row-top-padded-sm {
-    padding-top: 2em;
-  }
-  
-  @media screen and (max-width: 768px) {
-    .row-top-padded-sm {
-      padding-top: 2em;
-    }
-  }
-  
+
   .border-bottom {
     border-bottom: 1px solid rgba(0, 0, 0, 0.06);
   }
@@ -1274,169 +646,12 @@
   .lead {
     line-height: 1.8;
   }
-  
-  .no-js #loader {
-    display: none;
-  }
-  
-  .js #loader {
-    display: block;
-    position: absolute;
-    left: 100px;
-    top: 0;
-  }
-  
-  .fh5co-loader {
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background: url(../imgs/hourglass.svg) center no-repeat #222222;
-  }
-  /* GABRIEL MALINOSQUI */
-  
-  .mouse {
-    position: absolute;
-    width: 22px;
-    height: 42px;
-    bottom: -120px;
-    left: 50%;
-    margin-left: -12px;
-    border-radius: 15px;
-    border: 2px solid #e1e1e1;
-    -webkit-animation: intro 1s;
-    animation: intro 1s;
-  }
-  
-  .scroll {
-    display: block;
-    width: 3px;
-    height: 3px;
-    margin: 6px auto;
-    border-radius: 4px;
-    background: #e1e1e1;
-    -webkit-animation: finger 1s infinite;
-    animation: finger 1s infinite;
-  }
-  
-  @-webkit-keyframes intro {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(40px);
-      transform: translateY(40px);
-    }
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-  }
-  
-  @keyframes intro {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(40px);
-      transform: translateY(40px);
-    }
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0);
-      transform: translateY(0);
-    }
-  }
-  
-  @-webkit-keyframes finger {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      -webkit-transform: translateY(20px);
-      transform: translateY(20px);
-    }
-  }
-  
-  @keyframes finger {
-    0% {
-      opacity: 1;
-    }
-    100% {
-      opacity: 0;
-      -webkit-transform: translateY(20px);
-      transform: translateY(20px);
-    }
-  }
-  /* Typed */
-  
-  .keyword {
-    display: initial;
-  }
-  
-  .typed-cursor {
-    display: initial !important;
-    font-size: 60px !important;
-    letter-spacing: 0 !important;
-  }
-  
-  .typed-cursor {
-    opacity: 1;
-    -webkit-animation: blink 0.7s infinite;
-    -moz-animation: blink 0.7s infinite;
-    animation: blink 0.7s infinite;
-  }
-  
-  @keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @-webkit-keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @-moz-keyframes blink {
-    0% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  .login-img {
-    width: 100px;
-    border-bottom: 25px;
-  }
-  
+
   .form-control {
     border: 1px solid #414A50;
     border-radius: 2px;
     -webkit-box-shadow: none;
     box-shadow: none;
-  }
-  
-  .form-control.password {
-    border-right: none;
   }
   
   label {
@@ -1465,14 +680,7 @@
     border-left: none !important;
     border-radius: 0;
   }
-  
-  p.terms {
-    font-size: 15px;
-  }
-  
-  #passwordIcon {
-    cursor: hover;
-  }
+
   
   .logo-header {
     width: 40px;
@@ -1499,11 +707,7 @@
     z-index: 1003;
     position: relative;
   }
-  
-  .teste-hr {
-    margin-top: -25px;
-    margin-left: 182px;
-  }
+
   
   .howto-icons {
     width: 80px;
@@ -1630,6 +834,7 @@
   
   .easy-autocomplete {
     display: inline-block;
+    width: 100%;
   }
   
   .form-group > .easy-autocomplete {
@@ -1712,6 +917,11 @@
     margin-top: 20px;
     text-transform: uppercase;
   }
+
+.modal-footer>button {
+  font-size: 0.75em;
+}
+
   /*.fh5co-sub-ddown {
     color: #fff !important;
   }*/
