--- a/css/style.css
+++ b/css/style.css
@@ -304,8 +304,8 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     position: fixed;
   }
-  
   /* uncss:ignore */
+  
   #fh5co-header-section.header-fixed {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     position: fixed;
@@ -327,8 +327,8 @@
     float: left;
     display: none;
   }
-
   /* uncss:ignore */
+  
   #fh5co-logo.header-fixed {
     display: block;
   }
@@ -1239,5 +1239,14 @@
       -webkit-animation: cd-bounce-in 0.3s linear;
       -moz-animation: cd-bounce-in 0.3s linear;
       animation: cd-bounce-in 0.3s linear;
+    }
+    ul.courses-footer {
+      list-style: none;
+      font-size: 0.9em;
+      color: rgba(255, 255, 255, .5);
+    }
+    ul.courses-footer > li {
+      display: inline;
+      padding: 10px;
     }
   }
